--- a/jquery-demo.html
+++ b/jquery-demo.html
@@ -47,10 +47,9 @@
   </style>
 
   <!-- Import jQuery -->
-  <script
-    src="https://code.jquery.com/jquery-3.4.0.js"
-		integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
-		crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.6.0.js" 
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" 
+  crossorigin="anonymous">
   </script>
 </head>
 <body>
